[package]
name = "geoip2-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
clap = { version = "4.5.15", features = ["cargo", "env"] }
maxminddb = { version = "0.24.0", features = ["mmap", "memmap2"] }
serde = "1.0.207"
serde_json = "1.0.124"
tokio = { version = "1.39.2", features = ["rt", "rt-multi-thread"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
